# diaryx-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
diaryx-core/: Cargo.toml
diaryx-core/src/: lib.rs
src/: main.rs
