[package]
name = "diaryx-cli"
version = "v0.1.0-alpha"
edition = "2025"
license = "MIT"
description = "A command line interface (CLI) for handling Diaryx-formatted files"
repository = "https://github.com/adammharris/diaryx-cli/tree/main" # update later
keywords = ["diaryx", "markdown", "static-site", "cli"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

# If you later expose a library API (e.g., for embedding) you can add [lib].
# For now this is just a binary crate.
[package.metadata]
# Reserved for future schema / spec version embedding.

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
markdown = "1"
time = { version = "0.3", features = ["formatting","parsing"] }
once_cell = "1"

# Optional future enhancements (commented out for now):
# walkdir = "2"          # If we reintroduce directory discovery.
# rayon = "1"            # If we parallelize rendering or parsing.
# notify = "6"           # If we implement --watch.
# pulldown-cmark = "0.10" # Alternative Markdown parser if needed.
# lol_html = "1"         # For post-processing / minification.
# minijinja = "2"        # For more advanced templating.

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true

[profile.dev]
incremental = true

[[bin]]
name = "diaryx"
path = "src/main.rs"
