[package]
name = "diaryx-cli"
version = "0.3.0-alpha"
edition = "2024"
license = "MIT"
description = "Command-line interface (CLI) for handling Diaryx-formatted files"
repository = "https://github.com/adammharris/diaryx-cli/tree/main"
keywords = ["diaryx", "markdown", "static-site", "cli"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[workspace]
members = [
    "diaryx-core"
]

# If you later expose a library API (e.g., for embedding) you can add [lib].
# For now this is just a binary crate.
[package.metadata]
# Reserved for future schema / spec version embedding.

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
markdown = "1"
time = { version = "0.3", features = ["formatting","parsing"] }
once_cell = "1"
diaryx-core = { path = "diaryx-core" }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true

[profile.dev]
incremental = true

[[bin]]
name = "diaryx"
path = "src/main.rs"
