[package]
name = "diaryx-core"
version = "0.1.0-alpha"
edition = "2024"
license = "MIT"
description = "Core library for parsing, traversing, and rendering Diaryx-formatted Markdown into static site artifacts"
repository = "https://github.com/adammharris/diaryx-cli"
keywords = ["diaryx", "markdown", "static-site", "core", "wasm"]
categories = ["text-processing", "parser-implementations"]
readme = "../README.md"
publish = false

[lib]
name = "diaryx_core"
# rlib for normal Rust use, cdylib for wasm32-unknown-unknown (when feature = wasm)
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Enable when building for WebAssembly (browser or bundler).
wasm = ["wasm-bindgen"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
markdown = "1"
time = { version = "0.3", features = ["formatting","parsing"] }
once_cell = "1"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true

[profile.dev]
incremental = true
